# aes-proof

./: .gitignore  .justfile  .mocharc.json  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  RowShifting.r1cs  circuits.json  log_input_signals.txt  nistgmul.circom  optimization_notes.md  package-lock.json  package.json  tsconfig.json
.github/: settings.yml
.github/workflows/: ci.yml  circom.yml  mocha.yml  rust.yml  test.yml
circuits/: aes_256_ctr.circom  aes_256_ctr_test.circom  dec_aes_256_ctr_try1.circom  gcm_siv_dec_2_keys.circom  helper_functions.circom  multiplier.circom  tiny.circom
circuits/aes-ctr/: cipher.circom  ctr.circom  mix_columns.circom  sbox128.circom  tbox.circom  transformations.circom  utils.circom
circuits/aes-gcm/: README.md  aes-gcm-fold.circom  aes-gcm-foldable.circom  aes-gcm.circom  aes-gctr-fold.circom  aes-gctr-foldable.circom  aes_128_enc.circom  aes_128_enc_test.circom  aes_emulation.circom  gctr.circom  gfmul.circom  gfmul_int.circom  gfmulx.circom  ghash-foldable.circom  (+14 more)
circuits/aes-gcm-fold/: aes-gcm-fold.circom
circuits/aes-gcm-siv/: aes_256_ctr.circom  aes_256_encrypt.circom  aes_emulation.circom  gcm_siv_enc_2_keys.circom  helper_functions.circom
client/: package-lock.json  package.json  webpack.config.js
inputs/: aes_128_enc_witness.json  witness.json
ir_log/: template_0.txt  template_1.txt  template_10.txt  template_11.txt  template_12.txt  template_13.txt  template_14.txt  template_15.txt  template_16.txt  template_17.txt  template_18.txt  template_19.txt  template_2.txt  template_20.txt  template_21.txt  template_22.txt  template_23.txt  template_24.txt  template_25.txt  template_26.txt  template_27.txt  template_28.txt  template_29.txt  template_3.txt  template_30.txt  template_31.txt  template_32.txt  template_33.txt  template_34.txt  template_35.txt  template_36.txt  template_37.txt  template_38.txt  template_39.txt  template_4.txt  template_40.txt  template_41.txt  template_42.txt  template_43.txt  template_44.txt  (+57 more)
src/: consts.rs  lib.rs  main.rs  proof.rs  tests.rs  utils.rs  witness.rs
(+87 files in other folders)
