[package]
name = "aes-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hex = "0.4"
aes = "0.8.4"
ctr = "0.9.2"
aes-gcm = "0.9"
aes-gcm-siv = "0.11.1"
ghash = "0.5.1"
cipher = "=0.5.0-pre.4"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-bn254 = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel", "std"] }
ark-relations = { version = "=0.4.0", features=["std"] }